--- a/no-subnavigation.html
+++ b/no-subnavigation.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<title>Website Template: Simple Organization (demo)</title>
+	<title>Website Template: Simple Organization - No Subnavigation (demo)</title>
 </head>
 
 <body>
@@ -35,23 +35,6 @@
 				<div class="clearer">&nbsp;</div>
 
 			</div>
-
-			<div class="clearer">&nbsp;</div>
-
-		</div>
-
-		<div class="navigation" id="sub-nav">
-
-			<ul class="tabbed">
-				<li class="current-tab"><a href="index.html">Template Info</a></li>
-				<li><a href="style-demo.html">Style Demo</a></li>
-				<li><a href="comments.html">Comments</a></li>
-				<li><a href="archives.html">Archives</a></li>
-				<li><a href="no-subnavigation.html">No Subnavigation</a></li>
-				<li><a href="left-sidebar.html">Left Sidebar</a></li>
-				<li><a href="single-column.html">Single Column</a></li>
-				<li><a href="empty-page.html">Empty Page</a></li>
-			</ul>
 
 			<div class="clearer">&nbsp;</div>
 
