--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-	<title>Website Template: Simple Organization (demo)</title>
+	<title>Website Template: Simple Organization - Left Sidebar (demo)</title>
 </head>
 
 <body>
@@ -43,12 +43,12 @@
 		<div class="navigation" id="sub-nav">
 
 			<ul class="tabbed">
-				<li class="current-tab"><a href="index.html">Template Info</a></li>
+				<li><a href="index.html">Template Info</a></li>
 				<li><a href="style-demo.html">Style Demo</a></li>
 				<li><a href="comments.html">Comments</a></li>
 				<li><a href="archives.html">Archives</a></li>
 				<li><a href="no-subnavigation.html">No Subnavigation</a></li>
-				<li><a href="left-sidebar.html">Left Sidebar</a></li>
+				<li class="current-tab"><a href="left-sidebar.html">Left Sidebar</a></li>
 				<li><a href="single-column.html">Single Column</a></li>
 				<li><a href="empty-page.html">Empty Page</a></li>
 			</ul>
@@ -101,9 +101,9 @@
 
 	</div>
 
-	<div class="main" id="main-two-columns">
+	<div class="main" id="main-two-columns-left">
 
-		<div class="left" id="main-content">
+		<div class="right" id="main-content">
 
 			<div class="section">
 
@@ -183,7 +183,7 @@
 			
 		</div>
 
-		<div class="right sidebar" id="sidebar">
+		<div class="left sidebar" id="sidebar">
 
 			<div class="section">
 
